idea/testData/multiFileInspections/invalidBundleOrProperty/before/validPropertyKeys.kt
fun test() {
    K.message("foo.bar", "arg")
    K.message("foo.bar", "arg1", "arg2")
    J.message("foo.bar", "arg")
    J.message("foo.bar", "arg1", "arg2")
}